
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_1__ ;


typedef TYPE_1__* gdImagePtr ;
struct TYPE_7__ {int sx; int sy; } ;
typedef int FILE ;


 int EOF ;
 int MAX_XBM_LINE_SIZE ;
 scalar_t__ fgets (char*,int,int *) ;
 int gdImageColorAllocate (TYPE_1__*,int,int,int) ;
 TYPE_1__* gdImageCreate (unsigned int,unsigned int) ;
 int gdImageDestroy (TYPE_1__*) ;
 int gdImageSetPixel (TYPE_1__*,int ,int,int) ;
 int gd_error (char*) ;
 int getc (int *) ;
 int rewind (int *) ;
 int sscanf (char*,char*,...) ;
 int strcmp (char*,char*) ;
 int strlen (char*) ;
 char* strrchr (char*,char) ;

gdImagePtr gdImageCreateFromXbm(FILE * fd)
{
 char fline[MAX_XBM_LINE_SIZE];
 char iname[MAX_XBM_LINE_SIZE];
 char *type;
 int value;
 unsigned int width = 0, height = 0;
 int fail = 0;
 int max_bit = 0;

 gdImagePtr im;
 int bytes = 0, i;
 int bit, x = 0, y = 0;
 int ch;
 char h[8];
 unsigned int b;

 rewind(fd);
 while (fgets(fline, MAX_XBM_LINE_SIZE, fd)) {
  fline[MAX_XBM_LINE_SIZE-1] = '\0';
  if (strlen(fline) == MAX_XBM_LINE_SIZE-1) {
   return 0;
  }
  if (sscanf(fline, "#define %s %d", iname, &value) == 2) {
   if (!(type = strrchr(iname, '_'))) {
    type = iname;
   } else {
    type++;
   }

   if (!strcmp("width", type)) {
    width = (unsigned int) value;
   }
   if (!strcmp("height", type)) {
    height = (unsigned int) value;
   }
  } else {
   if ( sscanf(fline, "static unsigned char %s = {", iname) == 1
     || sscanf(fline, "static char %s = {", iname) == 1)
   {
    max_bit = 128;
   } else if (sscanf(fline, "static unsigned short %s = {", iname) == 1
     || sscanf(fline, "static short %s = {", iname) == 1)
   {
    max_bit = 32768;
   }
   if (max_bit) {
    bytes = (width + 7) / 8 * height;
    if (!bytes) {
     return 0;
    }
    if (!(type = strrchr(iname, '_'))) {
     type = iname;
    } else {
     type++;
    }
    if (!strcmp("bits[]", type)) {
     break;
    }
   }
   }
 }
 if (!bytes || !max_bit) {
  return 0;
 }

 if(!(im = gdImageCreate(width, height))) {
  return 0;
 }
 gdImageColorAllocate(im, 255, 255, 255);
 gdImageColorAllocate(im, 0, 0, 0);
 h[2] = '\0';
 h[4] = '\0';
 for (i = 0; i < bytes; i++) {
  while (1) {
   if ((ch=getc(fd)) == EOF) {
    fail = 1;
    break;
   }
   if (ch == 'x') {
    break;
   }
  }
  if (fail) {
   break;
  }

  if ((ch=getc(fd)) == EOF) {
   break;
  }
  h[0] = ch;
  if ((ch=getc(fd)) == EOF) {
   break;
  }
  h[1] = ch;
  if (max_bit == 32768) {
   if ((ch=getc(fd)) == EOF) {
    break;
   }
   h[2] = ch;
   if ((ch=getc(fd)) == EOF) {
    break;
   }
   h[3] = ch;
  }
  if (sscanf(h, "%x", &b) != 1) {
   gd_error("invalid XBM");
   gdImageDestroy(im);
   return 0;
  }
  for (bit = 1; bit <= max_bit; bit = bit << 1) {
   gdImageSetPixel(im, x++, y, (b & bit) ? 1 : 0);
   if (x == im->sx) {
    x = 0;
    y++;
    if (y == im->sy) {
     return im;
    }
    break;
   }
  }
 }

 gd_error("EOF before image was complete");
 gdImageDestroy(im);
 return 0;
}
